<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HL Pic Editor</string>
    <string name="title">Cropper</string>
    <string name="action_settings">Settings</string>
    <string name="fixedAspectRatio">fixed Ratio =</string>
    <string name="aspectRatioX">\u002010</string>
    <string name="aspectRatioXHeader">Ratio X =</string>
    <string name="aspectRatioY">\u002010</string>
    <string name="aspectRatioYHeader">Ratio Y =</string>
    <string name="showGuidelines">showGuidelines = </string>
    <string name="crop">Crop</string>
    <string name="rotate">Rotate</string>
    <string name="save">Save</string>
    <string name="croppedImageDesc">The cropped image.</string>
    <string name="choose_pic">Choose a pic</string>
    <string name="author_name">Haoquan Li,  </string>
    <string name="author_email">haoquan.li@nyu.edu</string>

    <string-array name="showGuidelinesArray">
        <item>Off</item>
        <item>On Touch</item>
        <item>On</item>
    </string-array>

</resources>
