<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/mylayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity" >
    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="80dp" >
	
	        <Button
	            android:id="@+id/choose_pic_button"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:layout_weight="1"
	            android:onClick="choose_pic"
	            android:text="@string/choose_pic" />
	
	        <Button
	            android:id="@+id/Button_save"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:layout_weight="1"
	            android:text="@string/save" />

	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="top"
	        android:layout_weight="1.17"
	        android:orientation="vertical" >
	
	        <!--
	        <ImageView
	            android:id="@+id/imageView1"
	            android:layout_width="wrap_content"
	            android:layout_height="192dp"
	            android:src="@drawable/butterfly" />
	        -->
	        
	        <com.edmodo.cropper.CropImageView
	            xmlns:custom="http://schemas.android.com/apk/res-auto"
	            android:id="@+id/CropImageView"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            custom:imageResource="@drawable/butterfly" />
	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="80dp" >
	
	        <Button
	            android:id="@+id/Button_rotate"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:layout_weight="1"
	            android:text="@string/rotate" />
	
	        <Button
	            android:id="@+id/Button_crop"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:layout_weight="1"
	            android:text="@string/crop" />
	
	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	        <LinearLayout android:layout_width="wrap_content" android:layout_height="match_parent"></LinearLayout>
	
	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/fixedAspectRatio"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:ems="10"
	            android:text="@string/fixedAspectRatio" />
	
	        <ToggleButton
	            android:id="@+id/fixedAspectRatioToggle"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1" />
	        
	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <LinearLayout
	            android:layout_width="wrap_content"
	            android:layout_height="60dp" >
	
	            <TextView
	                android:id="@+id/aspectRatioXHeader"
	                android:layout_width="90dp"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center_vertical"
	                android:gravity="center_vertical|right"
	                android:text="@string/aspectRatioXHeader" />
	
	            <TextView
	                android:id="@+id/aspectRatioX"
	                android:layout_width="55dp"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center"
	                android:text="@string/aspectRatioX" />
	
	            <LinearLayout
	                android:layout_width="wrap_content"
	                android:layout_height="match_parent"
	                android:orientation="vertical" >
	            </LinearLayout>
	
	        </LinearLayout>
	
	        <SeekBar
	            android:id="@+id/aspectRatioXSeek"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:layout_weight="1"
	            android:max="100"
	            android:progress="10" />
	
	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="60dp" >
	
	        <TextView
	            android:id="@+id/aspectRatioYHeader"
	            android:layout_width="90dp"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical"
	            android:ems="10"
	            android:gravity="center_vertical|right"
	            android:text="@string/aspectRatioYHeader" />
	
	        <TextView
	            android:id="@+id/aspectRatioY"
	            android:layout_width="55dp"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:text="@string/aspectRatioY" />
	
	        <SeekBar
	            android:id="@+id/aspectRatioYSeek"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:layout_weight="1"
	            android:max="100"
	            android:progress="10" />
	
	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="50dp" >

	        <LinearLayout
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent" >
	        </LinearLayout>

	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
			android:layout_gravity="bottom">
	        
	        <TextView
	            android:id="@+id/author_name"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="bottom"
	            android:layout_weight="1"
	            android:ems="10"
	            android:gravity="bottom|right"
	            android:text="@string/author_name" />
	
	        <TextView
	            android:id="@+id/author_email"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="bottom"
	            android:layout_weight="1"
	            android:ems="10"
	            android:gravity="bottom|right"
	            android:text="@string/author_email" />
	
	    </LinearLayout>
	</LinearLayout>
</LinearLayout>